--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>
       公害防止管理者（水質1種／騒音・振動／特定粉じん）<br>
       衛生管理者 第1種／冷凍保安責任者 第2種<br>
-      フォークリフト／玉掛け／FP3級／年金アドバイザー／簿記3級
+      
     </p>
   </div>
 </section>
@@ -64,8 +64,8 @@
   <h2>お問い合わせ</h2>
   <p>20分程度のオンライン相談（無料）にてご説明いたします。</p>
   <p>
-    メール：<a href="mailto:info@example.com">info@example.com</a><br>
-    電話：000-0000-0000
+    メール：<a href="mailto:kabutomugi@gmail.com">kabutomugi@gmail.com</a>
+    電話：090-2572-4164
   </p>
 </section>
 
