--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>環境・安全 外部顧問サービス</title>
-  <meta name="description" content="公害防止・衛生・冷凍保安の法定対応を、外部顧問として低コストで支援します。中小事業所・工場向け。">
-  <link rel="stylesheet" href="style.css"/>
+  <title>公害防止・衛生管理の外部顧問｜中小企業・工場向け</title>
+
+  <meta name="description" content="公害防止管理者・衛生管理者・冷凍保安責任者による外部顧問サービス。中小企業・工場向けに、専任不要で法定対応・行政対応を低コストで支援します。">
+
+  <  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <header class="hero">
@@ -76,3 +78,4 @@
 </footer>
 </body>
 </html>
+<p>対応エリア：全国（オンライン対応可）｜中小企業・工場向け</p>
