--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <meta name="google-site-verification" content="r0o5flC2ARFDJrU6dwaxcZxolVveunL02aPHKc4REqM" />
 <header class="hero">
   <div class="container">
     <h1>専任を置かずに、<br>公害・衛生・保安の法定対応を。</h1>
