--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="google-site-verification" content="r0o5flC2ARFDJrU6dwaxcZxolVveunL02aPHKc4REqM" />
   <meta name="description" content="公害防止管理者・衛生管理者・冷凍保安責任者による外部顧問サービス。中小企業・工場向けに、専任不要で法定対応・行政対応を低コストで支援します。">
 
-  <  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   
@@ -75,8 +75,9 @@
 <footer>
   <div class="container">
     <p>© 外部顧問サービス</p>
+    <p>対応エリア：全国（オンライン対応可）｜中小企業・工場向け</p>
   </div>
 </footer>
 </body>
 </html>
-<p>対応エリア：全国（オンライン対応可）｜中小企業・工場向け</p>
+
